--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-intersection-observer": "^8.30.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
