--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-icons": "^4.1.0",
     "react-intersection-observer": "^8.30.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
